Update 'bvyzwt7kf-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe:19ef300edef8f7bab608eb7942e3675afc10c50f@sha256:4e941e2ec231b11b763a71db7fd3f3b35b0d2c39df24f950f2b102746b3f7088

--- a/components/bvyzwt7kf-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/bvyzwt7kf-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: bvyzwt7kf-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:19ef300edef8f7bab608eb7942e3675afc10c50f@sha256:4e941e2ec231b11b763a71db7fd3f3b35b0d2c39df24f950f2b102746b3f7088
+          name: container-image
